--- a/ShScheduler/App.config
+++ b/ShScheduler/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System"/>
   </configSections>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=.\scheduler.db" providerName="System.Data.SqlClient"/>
@@ -24,6 +25,26 @@
       <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
+
+  <quartz>
+    <add key="quartz.scheduler.instanceName" value="DefaultQuartzScheduler" />
+    <add key="quartz.scheduler.instanceId" value="Quartz" />
+    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
+    <add key="quartz.threadPool.threadCount" value="10" />
+    <!--<add key="quartz.threadPool.threadPriority" value="2" />-->
+
+    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
+    <add key="quartz.jobStore.misfireThreshold" value="60000" />
+
+    <add key="quartz.jobStore.lockHandler.type" value="Quartz.Impl.AdoJobStore.UpdateLockRowSemaphore, Quartz" />
+    <add key="quartz.jobStore.useProperties" value="true" />
+    <add key="quartz.jobStore.dataSource" value="default" />
+    <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
+    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SQLiteDelegate, Quartz" />
+    <add key="quartz.dataSource.default.provider" value="SQLite-10" />
+    <add key="quartz.dataSource.default.connectionString" value="Data Source=scheduler.db;Version=3;Foreign Keys=ON;" />
+
+  </quartz>
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
