--- a/ShScheduler/App.config
+++ b/ShScheduler/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System"/>
+    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral,PublicKeyToken=b77a5c561934e089" />
   </configSections>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=.\scheduler.db" providerName="System.Data.SqlClient"/>
@@ -49,4 +49,15 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="1.0.88.0" newVersion="1.0.110.0" />
+      </dependentAssembly>
+
+    </assemblyBinding>
+  </runtime>
 </configuration>
