--- a/ShScheduler/packages.config
+++ b/ShScheduler/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="Quartz" version="3.0.7" targetFramework="net461" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
+  <package id="Quartz" version="2.6.2" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net461" />
 </packages>
