--- a/ShScheduler/ShScheduler.csproj
+++ b/ShScheduler/ShScheduler.csproj
@@ -68,6 +68,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Additional\CronControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Additional\CronControl.Designer.cs">
+      <DependentUpon>CronControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddJob.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\ControlResource.Designer.cs" />
     <Compile Include="Scheduler\HelloJob.cs" />
     <Compile Include="Scheduler\SchedulerInstance.cs" />
     <Compile Include="ViewModels\JobModel.cs" />
@@ -111,6 +118,9 @@
     <Compile Include="_ucTriggers.Designer.cs">
       <DependentUpon>_ucTriggers.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Additional\CronControl.resx">
+      <DependentUpon>CronControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddJob.resx">
       <DependentUpon>AddJob.cs</DependentUpon>
     </EmbeddedResource>
@@ -123,6 +133,7 @@
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\ControlResource.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
