--- a/ShScheduler/ShScheduler.csproj
+++ b/ShScheduler/ShScheduler.csproj
@@ -174,6 +174,8 @@
     <None Include="Resources\off.png" />
     <None Include="Resources\off-img.png" />
     <None Include="Resources\close.png" />
+    <None Include="Resources\planner.png" />
+    <None Include="Resources\completed.png" />
     <Content Include="Schema.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
