--- a/ShScheduler/App.config
+++ b/ShScheduler/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral,PublicKeyToken=b77a5c561934e089" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ShScheduler.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=.\scheduler.db" providerName="System.Data.SqlClient"/>
@@ -60,4 +63,20 @@
 
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <ShScheduler.Properties.Settings>
+      <setting name="Login" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RememberMe" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="LastLoggedUser" serializeAs="String">
+        <value />
+      </setting>
+    </ShScheduler.Properties.Settings>
+  </userSettings>
 </configuration>
