--- a/ShScheduler/ShScheduler.csproj
+++ b/ShScheduler/ShScheduler.csproj
@@ -86,6 +86,7 @@
     <Compile Include="AddTrigger.Designer.cs">
       <DependentUpon>AddTrigger.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\MessageHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
