--- a/ShData/ShData.csproj
+++ b/ShData/ShData.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="DataAccess.cs" />
     <Compile Include="Models\AuthorizedModel.cs" />
+    <Compile Include="Models\FeedbackModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\SmtpModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
