--- a/ShScheduler/ShScheduler.csproj
+++ b/ShScheduler/ShScheduler.csproj
@@ -91,6 +91,7 @@
       <DependentUpon>DialogForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\MessageHelper.cs" />
+    <Compile Include="Helpers\PInvoker.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -246,6 +247,8 @@
     <None Include="Resources\planner.png" />
     <None Include="Resources\completed.png" />
     <None Include="Resources\timer.ico" />
+    <None Include="Resources\task.png" />
+    <None Include="Resources\user.png" />
     <Content Include="Schema.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
