Started add translations

--- a/ShScheduler/App.config
+++ b/ShScheduler/App.config
@@ -77,6 +77,9 @@
       <setting name="LastLoggedUser" serializeAs="String">
         <value />
       </setting>
+      <setting name="Language" serializeAs="String">
+        <value>0</value>
+      </setting>
     </ShScheduler.Properties.Settings>
   </userSettings>
 </configuration>
