--- a/ShScheduler/Properties/Settings.settings
+++ b/ShScheduler/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="LastLoggedUser" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Language" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
