--- a/ShScheduler/App.config
+++ b/ShScheduler/App.config
@@ -14,13 +14,14 @@
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="log.txt" />
-      <appendToFile value="true" />
+      <appendToFile value="true"/>
       <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="250KB" />
+      <maxSizeRollBackups value="2" />
+      <maximumFileSize value="3MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+        <header value="DateTime | Thread | Level | ClassName | Message&#xD;&#xA;" />
+        <conversionPattern value="%date | %thread | %-5level | %logger | %message%newline%newline" />
       </layout>
     </appender>
     <root>
